Création architecture + configuration MySQL + entités